Adding new file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="gallery.html">GALLERY</a></li>
                     <li><a href="#AbMe">ABOUT ME</a></li>
-                    <li><a href="contact.html">RIPETIZIONI</a></li>
+                    <li><a href="file.html">FILES</a></li>
                 </ul>
             <div class="hid">
                 <p>WebSite made by Alexandro Sas</p>
@@ -36,7 +36,7 @@
 
         <div class="herotxt mbtxt">
             <h1>Hi, I'm Alexandro Sas</h1>
-            <p>And I'm a computer science student.</p>
+            <p>And I'm a computer science engineering student.</p>
             <i class="fa fa-angle-left"></i>
             <i class="fa fa-angle-right"></i>
         </div>
