--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="gallery.html">GALLERY</a></li>
                     <li><a href="#AbMe">ABOUT ME</a></li>
-                    <li><a href="file.html">FILES</a></li>
+                    <li><a href="https://<user.name>.github.io/<repo.name>/file.html">FILES</a></li>
                 </ul>
             <div class="hid">
                 <p>WebSite made by Alexandro Sas</p>
