Improving mobile portfolio

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
                 <div class="pitem tall five">Yongnuo YN50mm f1.8</div>
                 <div class="pitem wide six">Marina di Mancaversa, Gallipoli</div>
             </div>
+            <div class="header">
+                <div><img src="./images/moto1.jpg"></div>
+                <div><img src="./images/moto2.jpg"></div>
+                <div><img src="./images/closeup.jpg"></div>
+                <div><img src="./images/moto3.jpg"></div>
+                <div><img src="./images/moto5.jpg"></div>
+                <div><img src="./images/warmBack.jpg"></div>
+            </div>
             </div>
             <div class="line secondline"></div>
             <div class="contacts" id="cont">
