--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li><a href="#abme" class="nav-item">ABOUT ME</a></li>
                     <li><a href="#prtf" class="nav-item">PORTFOLIO</a></li>
                     <li><a href="#cont" class="nav-item">CONTACT</a></li>
+                    <li><a href="./webcam.html" class="nav-item">WEBCAM</a></li>
                 </ul>
                 <ul class="social">
                     <li><a href="https://www.instagram.com/alexandro.sas/?hl=it" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
