--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#abme" class="nav-item">ABOUT ME</a></li>
                     <li><a href="#prtf" class="nav-item">PORTFOLIO</a></li>
                     <li><a href="#cont" class="nav-item">CONTACT</a></li>
-                    <li><a href="./webcam.html" class="nav-item">WEBCAM</a></li>
+                    <li><a href="./game.html" class="nav-item">GAME</a></li>
                 </ul>
                 <ul class="social">
                     <li><a href="https://www.instagram.com/alexandro.sas/?hl=it" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
@@ -41,7 +41,7 @@
         <div class="maincontent">
             <div class="aboutme" id="abme">
                 <h1 >About Me</h1>
-                <p>I'm Alexandro Sas and I was born in 1998. I attended the musical class of the "Antonio Gramsci" middle school in Aprilia, where i learned how to play the piano. I graduated with 100/100 at "Antonio Meucci" high school in Aprilia (2016-2017). Now I'm studying computer science engineering at the "Sapienza Università di Roma", Latina headquarter. I participated with my class in two videomaking competitons made by my high school and i've been rewarded both times. I participated in an acting workshop with Alessandro Borghi. I have practiced different sports like: Latin American dances, swimming, 5-a-side football, and football. I have lots of passions: photography, drawing, music. I'm a self-taught photographer and I inherited the love for drawing by my dad. I know pretty well the 2d and 3d graphic programs(ex. Blender, Illustrator), the photo and video editing (ex. Photoshop, Premiere, Lightroom), the musical production (ex. Cubase, Musescore).</p>
+                <p>Working on my own definition...</p>
             </div>
             <div class="line"></div>
             <div class="gallerybody" id="prtf">
