--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <li><a href="#abme" class="nav-item">ABOUT ME</a></li>
                     <li><a href="#prtf" class="nav-item">PORTFOLIO</a></li>
                     <li><a href="#cont" class="nav-item">CONTACT</a></li>
-                    <li><a href="./game.html" class="nav-item">GAME</a></li>
+                    <li><a href="./arkanoid.html" class="nav-item">ARKANOID</a></li>
+                    <li><a href="./snake.html" class="nav-item">SNAKE</a></li>
                 </ul>
                 <ul class="social">
                     <li><a href="https://www.instagram.com/alexandro.sas/?hl=it" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
