--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li><a href="#prtf" class="nav-item">PORTFOLIO</a></li>
                     <li><a href="#cont" class="nav-item">CONTACT</a></li>
                     <li><a href="./arkanoid.html" class="nav-item">ARKANOID</a></li>
+                    <li><a href="./battleship.html" class="nav-item">BATTLESHIP</a></li>
                     <li><a href="./snake.html" class="nav-item">SNAKE</a></li>
                 </ul>
                 <ul class="social">
