Updating Socialnetwork Links

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <li><a href="./snake.html" class="nav-item">SNAKE</a></li>
                 </ul>
                 <ul class="social">
-                    <li><a href="https://www.instagram.com/alexandro.sas/?hl=it" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
+                    <li><a href="https://www.instagram.com/alexandro.sas/" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
                     <li><a href="https://www.youtube.com/channel/UCFz_mZXOTDt9hBtlzXCSluA" id="youtube" target="_blank"><i class="fab fa-youtube" title="YouTube"></i></a></li>
-                    <li><a href="https://www.facebook.com/alexandro.sass" id="facebook" target="_blank"><i class="fab fa-facebook" title="FaceBook"></i></a></li>
-                    <li><a href="https://twitter.com/alexandro_sas" id="twitter" target="_blank"><i class="fab fa-twitter" title="Twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/alexandro-sas-09aba11b1" id="linkedin" target="_blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a></li>
+                    <li><a href="https://twitter.com/AlexandroSas98" id="twitter" target="_blank"><i class="fab fa-twitter" title="Twitter"></i></a></li>
                 </ul>                   
             </div>
         </div>
@@ -75,10 +75,10 @@
                     <input type="submit" class="form-control submit" value="SEND">
                 </form>
                 <ul class="social2">
-                    <li><a href="https://www.instagram.com/alexandro.sas/?hl=it" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
+                    <li><a href="https://www.instagram.com/alexandro.sas/" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
                     <li><a href="https://www.youtube.com/channel/UCFz_mZXOTDt9hBtlzXCSluA" id="youtube" target="_blank"><i class="fab fa-youtube" title="YouTube"></i></a></li>
-                    <li><a href="https://www.facebook.com/alexandro.sass" id="facebook" target="_blank"><i class="fab fa-facebook" title="FaceBook"></i></a></li>
-                    <li><a href="https://twitter.com/alexandro_sas" id="twitter" target="_blank"><i class="fab fa-twitter" title="Twitter"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/alexandro-sas-09aba11b1" target="_blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a></li>
+                    <li><a href="https://twitter.com/AlexandroSas98" id="twitter" target="_blank"><i class="fab fa-twitter" title="Twitter"></i></a></li>
                 </ul>   
                 <p>WebSite entirely made by Alexandro Sas</p>
                 
@@ -88,4 +88,3 @@
         <script src="./main.js"></script>
     </body>
 </html>
-
