--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
                     <li><a href="#abme" class="nav-item">ABOUT ME</a></li>
                     <li><a href="#prtf" class="nav-item">PORTFOLIO</a></li>
                     <li><a href="#cont" class="nav-item">CONTACT</a></li>
+                    <!--
                     <li><a href="./arkanoid.html" class="nav-item">ARKANOID</a></li>
                     <li><a href="./battleship.html" class="nav-item">BATTLESHIP</a></li>
                     <li><a href="./snake.html" class="nav-item">SNAKE</a></li>
+                    -->
+                    <li><a href="./carlos.html" class="nav-item">Carlos Riga</a></li>
                 </ul>
                 <ul class="social">
                     <li><a href="https://www.instagram.com/alexandro.sas/" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
@@ -68,7 +71,7 @@
             <div class="line secondline"></div>
             <div class="contacts" id="cont">
                 <h1>Contact Me</h1>
-                <form id="content-form" method="post" action="">
+                <form id="content-form" method="POST" action="./contactme.php">
                     <input name="name" type="text" class="form-control" placeholder="Name" required><br>
                     <input name="email" type="text" class="form-control" placeholder="Email" required><br>
                     <textarea name="message" class="form-control" placeholder="Message" rows="4" required></textarea><br>
