--- a/carlos.html
+++ b/carlos.html
@@ -6,14 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Riga</title>
     <link rel="stylesheet" href="./carlos.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Marck+Script|Poiret+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Showroom</h1>
+    <h1>SHOWROOM</h1>
     <div class="container">
         <div class="card">
             <ul>
                 <li><img src="./images/carlos1.jpg" alt="image 1"></li>
                 <li><img src="./images/carlos1e.jpg" alt="image 1 edited"></li>
+            </ul>
+        </div>
+        <div class="card">
+            <ul id="ulc3">
+                <li><img id="c3" src="./images/carlos3.jpg" alt="image 3"></li>
+                <li><img src="./images/carlos3e.jpg" alt="image 3 edited"></li>
             </ul>
         </div>
         <div class="card">
