--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <div class="pitem tall five">Yongnuo YN50mm f1.8</div>
                 <div class="pitem wide six">Marina di Mancaversa, Gallipoli</div>
             </div>
+            <p><a href="./gallery.html">Show More...</a></p>
             <div class="header">
                 <div><img src="./images/moto1.jpg"></div>
                 <div><img src="./images/moto2.jpg"></div>
