last pic carlos

--- a/carlos.html
+++ b/carlos.html
@@ -30,6 +30,7 @@
             <ul>
                 <li><img src="./images/carlos2.jpg" alt="image 2"></li>
                 <li><img src="./images/carlos2e.jpg" alt="image 2 edited"></li>
+                <li><img src="./images/carlos2ee.jpg" alt="image 2 editeded"></li>
             </ul>
         </div>
     </div>
