--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="maincontent">
             <div class="aboutme" id="abme">
                 <h1 >About Me</h1>
-                <p>Working on my own definition...</p>
+                <p style="width: 90%; margin: 0 auto; padding: 30px 10px 10px 0px;">I'm graduated as Information Engineer at "La Sapienza - Università di Roma" in December 2020.<br />I can code in various languages as HTML, CSS, JS, PHP, XML, JAVA, C, PYTHON, AMPL, etc..<br />I've studied piano for 3 years during my middle school, but i've never stopped playing it. I have a Nikon d7100 and i shoot as self-thaught.<br />Most important: I'm still working on my own definition... </p>
             </div>
             <div class="line"></div>
             <div class="gallerybody" id="prtf">
@@ -59,7 +59,6 @@
                 <div class="pitem tall five">Yongnuo YN50mm f1.8</div>
                 <div class="pitem wide six">Marina di Mancaversa, Gallipoli</div>
             </div>
-            <p><a href="./gallery.html">Show More...</a></p>
             <div class="header">
                 <div><img src="./images/moto1.jpg"></div>
                 <div><img src="./images/moto2.jpg"></div>
@@ -69,6 +68,7 @@
                 <div><img src="./images/warmBack.jpg"></div>
             </div>
             </div>
+            <p><a style="display:block; color: crimson; text-align: center; margin: 0 auto;" href="./gallery.html">SHOW MORE...</a></p>
             <div class="line secondline"></div>
             <div class="contacts" id="cont">
                 <h1>Contact Me</h1>
