--- a/carlos.html
+++ b/carlos.html
@@ -12,25 +12,25 @@
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>SHOWROOM</h1>
+    <h1>SHOWROOM - Carlos Riga's Opinion Matter</h1>
     <div class="container">
         <div class="card">
             <ul>
-                <li><img src="./images/carlos1.jpg" alt="image 1"></li>
-                <li><img src="./images/carlos1e.jpg" alt="image 1 edited"></li>
+                <li><img src="./images/carlos1.jpg" alt="image 1"><span>Original - 50mm - iso400 - f1.8 - 1/1250s</span></li>
+                <li><img src="./images/carlos1e.jpg" alt="image 1 edited"><span>Edited</span></li>
             </ul>
         </div>
         <div class="card">
             <ul id="ulc3">
-                <li><img id="c3" src="./images/carlos3.jpg" alt="image 3"></li>
-                <li><img src="./images/carlos3e.jpg" alt="image 3 edited"></li>
+                <li><img id="c3" src="./images/carlos3.jpg" alt="image 3"><span>Original - 50mm - iso400 - f1.8 - 1/1250s</span></li>
+                <li><img src="./images/carlos3e.jpg" alt="image 3 edited"><span>Edited</span></li>
             </ul>
         </div>
         <div class="card">
             <ul>
-                <li><img src="./images/carlos2.jpg" alt="image 2"></li>
-                <li><img src="./images/carlos2e.jpg" alt="image 2 edited"></li>
-                <li><img src="./images/carlos2ee.jpg" alt="image 2 editeded"></li>
+                <li><img src="./images/carlos2.jpg" alt="image 2"><span>Original - 50mm - iso400 - f1.8 - 1/640s</span></li>
+                <li><img src="./images/carlos2e.jpg" alt="image 2 edited"><span>Edited</span></li>
+                <li><img src="./images/carlos2ee.jpg" alt="image 2 editeded"><span>Instagram</span></li>
             </ul>
         </div>
     </div>
