--- a/index.html
+++ b/index.html
@@ -4,38 +4,34 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="./style.css" />
-        <link rel="stylesheet" href="./style2.css" />
-        <link rel="stylesheet" href="./style3.css" />
+        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./css/style2.css" />
+        <link rel="stylesheet" href="./css/style3.css" />
         <title>Alexandro Sas</title>
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Marck+Script|Poiret+One" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/d172d3c412.js"></script>
-
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     </head>
     <body>
         <div class="heroimage">
             <div class="container">
                 <h1>Alexandro Sas</h1>
-                <h4>PHOTOGRAPHER // COMPUTER SCIENCE ENGINEER</h4>
-                <p>360° Artist. Photographer & Videomaker. Always looking for new Adventures that can level me up. Currently residing in Aprilia(Lt), Italy.</p>
+                <h4>ARTIST // COMPUTER SCIENCE ENGINEER</h4>
+                <p>Working as Software Developer for <a style="color: rgba(255,255,255,0.65)" href="http://www.novaservicesrl.com/">Nova Service SRL</a>.
+                <br />On my own time I draw, code, do photography and much more...
+                <br /><br />Currently residing in Aprilia(Lt), Italy.</p>
                 <p>Alexandro Sas</p>
                 <ul class="links">
                     <li><a href="" class="nav-item">HOME</a></li>
                     <li><a href="#abme" class="nav-item">ABOUT ME</a></li>
                     <li><a href="#prtf" class="nav-item">PORTFOLIO</a></li>
                     <li><a href="#cont" class="nav-item">CONTACT</a></li>
-                    <!--
-                    <li><a href="./arkanoid.html" class="nav-item">ARKANOID</a></li>
-                    <li><a href="./battleship.html" class="nav-item">BATTLESHIP</a></li>
-                    <li><a href="./snake.html" class="nav-item">SNAKE</a></li>
-                    -->
-                    <li><a href="./carlos.html" class="nav-item">Carlos Riga</a></li>
+                    <li><a href="" class="nav-item">GAMES</a></li>
                 </ul>
                 <ul class="social">
+                    <li><a href="https://github.com/AlexandroSas" id="github" target="_blank"><i class="fab fa-github" title="Github"></i></a></li>
                     <li><a href="https://www.instagram.com/alexandro.sas/" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
                     <li><a href="https://www.youtube.com/channel/UCFz_mZXOTDt9hBtlzXCSluA" id="youtube" target="_blank"><i class="fab fa-youtube" title="YouTube"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/alexandro-sas-09aba11b1" id="linkedin" target="_blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a></li>
@@ -60,12 +56,12 @@
                 <div class="pitem wide six">Marina di Mancaversa, Gallipoli</div>
             </div>
             <div class="header">
-                <div><img src="./images/moto1.jpg"></div>
-                <div><img src="./images/moto2.jpg"></div>
-                <div><img src="./images/closeup.jpg"></div>
-                <div><img src="./images/moto3.jpg"></div>
-                <div><img src="./images/moto5.jpg"></div>
-                <div><img src="./images/warmBack.jpg"></div>
+                <div><img src="../img/moto1.jpg"></div>
+                <div><img src="../img/moto2.jpg"></div>
+                <div><img src="../img/closeup.jpg"></div>
+                <div><img src="../img/moto3.jpg"></div>
+                <div><img src="../img/moto5.jpg"></div>
+                <div><img src="../img/warmBack.jpg"></div>
             </div>
             </div>
             <p><a style="display:block; color: crimson; text-align: center; margin: 0 auto;" href="./gallery.html">SHOW MORE...</a></p>
@@ -79,6 +75,7 @@
                     <input type="submit" class="form-control submit" value="SEND">
                 </form>
                 <ul class="social2">
+                    <li><a href="https://github.com/AlexandroSas" id="github" target="_blank"><i class="fab fa-github" title="Github"></i></a></li>
                     <li><a href="https://www.instagram.com/alexandro.sas/" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
                     <li><a href="https://www.youtube.com/channel/UCFz_mZXOTDt9hBtlzXCSluA" id="youtube" target="_blank"><i class="fab fa-youtube" title="YouTube"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/alexandro-sas-09aba11b1" target="_blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a></li>
@@ -89,6 +86,6 @@
                 <button id="bcktop"><i class="fas fa-chevron-up"></i></button>
             </div>
         </div>
-        <script src="./main.js"></script>
+        <script src="./js/smooth_scroll.js"></script>
     </body>
 </html>
