fixed graphics bugs

--- a/index.html
+++ b/index.html
@@ -64,16 +64,21 @@
                 <div><img src="../img/warmBack.jpg"></div>
             </div>
             </div>
-            <p><a style="display:block; color: crimson; text-align: center; margin: 0 auto;" href="./gallery.html">SHOW MORE...</a></p>
+            <!--<p><a style="display:block; color: crimson; text-align: center; margin: 0 auto;" href="./gallery.html">SHOW MORE...</a></p>-->
             <div class="line secondline"></div>
-            <div class="contacts" id="cont">
+            <div class="contacts" style="display:  grid; grid-template-rows: 20% 50% 10% 15% 5%; align-items: center; justify-items: center;"id="cont">
                 <h1>Contact Me</h1>
-                <form id="content-form" method="POST" action="./contactme.php">
+                <div style="text-align: left; padding: 1em; color: white;">
+                    You can email me at: alexandro.sas98@gmail.com<br><br>
+                    If you do not get an answer within a day please use other form of socialmedia. Any of those below would do the job.<br><br>
+                    Thank you <i class="fa fa-heart"></i>
+                </div>
+                <!-- <form id="content-form" method="POST" action="./contactme.php">
                     <input name="name" type="text" class="form-control" placeholder="Name" required><br>
                     <input name="email" type="text" class="form-control" placeholder="Email" required><br>
                     <textarea name="message" class="form-control" placeholder="Message" rows="4" required></textarea><br>
                     <input type="submit" class="form-control submit" value="SEND">
-                </form>
+                </form> -->
                 <ul class="social2">
                     <li><a href="https://github.com/AlexandroSas" id="github" target="_blank"><i class="fab fa-github" title="Github"></i></a></li>
                     <li><a href="https://www.instagram.com/alexandro.sas/" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
