--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 <div class="pitem wide six">Marina di Mancaversa, Gallipoli</div>
             </div>
             <div class="header">
-                <div><img src="../img/moto1.jpg"></div>
-                <div><img src="../img/moto2.jpg"></div>
-                <div><img src="../img/closeup.jpg"></div>
-                <div><img src="../img/moto3.jpg"></div>
-                <div><img src="../img/moto5.jpg"></div>
-                <div><img src="../img/warmBack.jpg"></div>
+                <div><img src="https://alexandrosas.github.io/home/img/moto1.jpg"></div>
+                <div><img src="https://alexandrosas.github.io/home/img/moto2.jpg"></div>
+                <div><img src="https://alexandrosas.github.io/home/img/closeup.jpg"></div>
+                <div><img src="https://alexandrosas.github.io/home/img/moto3.jpg"></div>
+                <div><img src="https://alexandrosas.github.io/home/img/moto5.jpg"></div>
+                <div><img src="https://alexandrosas.github.io/home/img/warmBack.jpg"></div>
             </div>
             </div>
             <!--<p><a style="display:block; color: crimson; text-align: center; margin: 0 auto;" href="./gallery.html">SHOW MORE...</a></p>-->
