--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <li><a href="#abme" class="nav-item">ABOUT ME</a></li>
                     <li><a href="#prtf" class="nav-item">PORTFOLIO</a></li>
                     <li><a href="#cont" class="nav-item">CONTACT</a></li>
-                    <li><a href="" class="nav-item">GAMES</a></li>
+                    <li><a href="https://alexandrosas.github.io/home/giulio.html" class="nav-item">GIULIO</a></li>
                 </ul>
                 <ul class="social">
-                    <li><a href="https://github.com/AlexandroSas" id="github" target="_blank"><i class="fab fa-github" title="Github"></i></a></li>
+                    <li><a href="" id="github" target="_blank"><i class="fab fa-github" title="Github"></i></a></li>
                     <li><a href="https://www.instagram.com/alexandro.sas/" id="instagram" target="_blank"><i class="fab fa-instagram" title="Instagram"></i></a></li>
                     <li><a href="https://www.youtube.com/channel/UCFz_mZXOTDt9hBtlzXCSluA" id="youtube" target="_blank"><i class="fab fa-youtube" title="YouTube"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/alexandro-sas-09aba11b1" id="linkedin" target="_blank"><i class="fab fa-linkedin" title="LinkedIn"></i></a></li>
