--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#abme" class="nav-item">ABOUT ME</a></li>
                     <li><a href="#prtf" class="nav-item">PORTFOLIO</a></li>
                     <li><a href="#cont" class="nav-item">CONTACT</a></li>
-                    <li><a href="https://alexandrosas.github.io/home/giulio.html" class="nav-item">GIULIO</a></li>
+                    <!--<li><a href="https://alexandrosas.github.io/home/giulio.html" class="nav-item">GIULIO</a></li>-->
                 </ul>
                 <ul class="social">
                     <li><a href="" id="github" target="_blank"><i class="fab fa-github" title="Github"></i></a></li>
